docs: require fields by default, mark nullables
